ARL-149: Add height to Searchbar-search to fix placeholder text alignment. (#741)

--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -22,6 +22,7 @@
   padding-right: 20px;
   left: 0;
   width: 100%;
+  height: 100%;
   background: transparent;
   .dark & { color: $zorroa-greyish-brown; }
 }
